--- a/project/project/project.vcxproj
+++ b/project/project/project.vcxproj
@@ -19,6 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <None Include="10_02f_Shader.frag" />
+    <None Include="10_02f_Shader.vert" />
     <None Include="10_02v_Shader.frag" />
     <None Include="10_02v_Shader.vert" />
   </ItemGroup>
